# aoc-22-ocaml

./: AOC_22.opam  dune-project
lib/: advent.ml  advent.mli  dune  input.ml  input.mli  list.ml  list.mli  string.ml  string.mli  tuple.ml  tuple.mli
