(lang dune 3.4)

(name AOC_22)

(generate_opam_files true)

(source
 (github CoBrooks/AOC-22-ocaml))

(authors "Cole Brooks")

(maintainers "Me :)")

(license MIT)

(package
 (name AOC_22)
 (synopsis "Advent of Code '22 in OCaml")
 (description "My first project with OCaml; this is an educational project.")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
